--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">PlantPal</string>
 
-
     <string name="str_please_wait">Please Wait</string>
     <string name="str_alert">Alert</string>
     <string name="str_confirm">Confirm</string>
@@ -10,55 +9,50 @@
     <string name="str_no">No</string>
     <string name="str_error">Error</string>
     <string name="str_success">Success</string>
-    <string name="str_sorry">Ops</string>
+    <string name="str_sorry">Oops</string>
     <string name="str_cancel">Cancel</string>
     <string name="str_save">Save</string>
     <string name="str_send">Send</string>
     <string name="str_close">Close</string>
     <string name="str_delete">Delete</string>
     <string name="str_update">Update</string>
-    <string name="title_not_found">Not Found Data</string>
+    <string name="title_not_found">Data Not Found</string>
     <string name="str_loading">Loading</string>
     <string name="str_not_selected">Not Selected</string>
     <string name="str_password">Password</string>
     <string name="str_login">Login</string>
-    <string name="str_error_not_expected">Not Expected Error</string>
+    <string name="str_error_not_expected">Unexpected Error</string>
     <string name="str_remember_me">Remember Me</string>
     <string name="str_profile">Profile</string>
     <string name="str_logout">Logout</string>
     <string name="str_sign_up">Sign Up</string>
-    <string name="str_not_have_account">Not Have An Account, SignUp</string>
-    <string name="str_already_have_account">Already Have Account, Login</string>
+    <string name="str_not_have_account">Don\'t Have an Account? Sign Up</string>
+    <string name="str_already_have_account">Already Have an Account? Login</string>
 
+    <string name="error_enter_your_name">Please Enter Your Name</string>
+    <string name="error_enter_your_email">Please Enter Your Email</string>
+    <string name="error_email_not_validation">Invalid Email</string>
+    <string name="error_enter_your_address">Please Enter Your Address</string>
+    <string name="error_enter_your_password">Please Enter Your Password</string>
 
-    <string name="error_enter_your_name">Enter Your Name</string>
-    <string name="error_enter_your_email">Enter Your Email</string>
-    <string name="error_email_not_validation">Email Not Validation</string>
-    <string name="error_enter_your_address">Enter Your Address</string>
-    <string name="error_enter_your_password">Enter Your Password</string>
+    <string name="error_required">Field Required</string>
+    <string name="error_image_required">Image Required</string>
 
-
-    <string name="error_required">Required</string>
-
-    <string name="error_image_required">Image Is Required</string>
-
-    <string name="str_no_plant">Not Found Plant</string>
-    <string name="str_no_result">No Result Found</string>
-    <string name="str_no_accessory">Not Found Accessory</string>
-    <string name="str_no_users">Not Found Users</string>
-    <string name="str_no_favorite">Not Found Favorite</string>
+    <string name="str_no_plant">Plant Not Found</string>
+    <string name="str_no_result">No Results Found</string>
+    <string name="str_no_accessory">Accessory Not Found</string>
+    <string name="str_no_users">Users Not Found</string>
+    <string name="str_no_favorite">No Favorites Found</string>
     <string name="str_no_cart_item">No Items In Cart</string>
-
 
     <string name="hint_email">Email</string>
     <string name="hint_address">Address</string>
     <string name="user_name">User Name</string>
     <string name="str_users">Users</string>
-    <string name="str_not_exist_this_email">Email Not Exist</string>
-    <string name="str_password_not_correct">Password Not Exist</string>
+    <string name="str_not_exist_this_email">Email Does Not Exist</string>
+    <string name="str_password_not_correct">Incorrect Password</string>
 
-
-    <string name="str_email_exist">This Email Is Exist</string>
+    <string name="str_email_exist">This Email Already Exists</string>
     <string name="str_plant">Plant</string>
     <string name="str_accessory">Accessory</string>
     <string name="hint_plant_name">Plant Name</string>
@@ -74,30 +68,28 @@
     <string name="hint_grow_habit">Grow Habit</string>
     <string name="hint_description">Description</string>
     <string name="add_successfully">Added Successfully</string>
-    <string name="update_successfully">Update Successfully</string>
-    <string name="delete_successfully">Delete Successfully</string>
-    <string name="message_send_successfully">Message Send Successfully</string>
+    <string name="update_successfully">Updated Successfully</string>
+    <string name="delete_successfully">Deleted Successfully</string>
+    <string name="message_send_successfully">Message Sent Successfully</string>
     <string name="hint_accessory_name">Accessory Name</string>
     <string name="str_feedback">Feedback</string>
-    <string name="str_users_details">Users Details</string>
-
+    <string name="str_users_details">User Details</string>
 
     <string name="title_update_plant">Update Plant</string>
 
-    <string name="error_no_app">not found app to do this action</string>
-    <string name="msg_confirm_delete">Are You Sure To Delete</string>
-    <string name="msg_confirm_delete_account">Are You Sure To Delete This Account</string>
+    <string name="error_no_app">App not found to perform this action</string>
+    <string name="msg_confirm_delete">Are You Sure You Want to Delete?</string>
+    <string name="msg_confirm_delete_account">Are You Sure You Want to Delete This Account?</string>
     <string name="msg_account_deleted">This Account Has Been Deleted</string>
 
     <string name="str_uploading_image">Uploading Image</string>
-    <string name="str_status_uploading_image">Progress</string>
+    <string name="str_status_uploading_image">Uploading Progress</string>
     <string name="hint_species">Species</string>
     <string name="hint_type">Type</string>
     <string name="hint_search_by_name">Search By Name</string>
     <string name="str_filter">Filter</string>
     <string name="str_filter_by">Filter By</string>
     <string name="str_sort_by">Sort By</string>
-
 
     <string name="str_name">Name</string>
     <string name="str_price">Price</string>
@@ -114,5 +106,19 @@
     <string name="str_contact_us">Contact Us</string>
     <string name="str_version">Version</string>
 
+    <!-- added by abdu and hesham -->
+    <string name="login_welcome_text">Log In!</string>
+    <string name="login_welcome">Welcome Back,</string>
+
+    <string name="signup_welcome_hello">Hello,</string>
+    <string name="signup_welcome_text">Sign Up!</string>
+
+    <string name="bg_img_desc">Image View</string>
+    <string name="add_img_item_desc">Image Item</string>
+    <string name="plus_btn_desc">Increase Button</string>
+    <string name="minus_btn_desc">Decrease Button</string>
+    <string name="pro_details_delete_btn_desc">Remove item Button</string>
+    <string name="pro_details_like_btn_desc">Like Button</string>
+    <!-- ************************************************  -->
 
 </resources>
